--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,5 +1,5 @@
 env:
-    MANIFEST: https://github.com/LineageOS/android.git -b lineage-18.1 --git-lfs -g default,-mips,-darwin,-notdefault
+    MANIFEST: https://github.com/LineageOS/android.git -b lineage-18.1
     DEVICE: RMX2020
     OEM: realme
     DT_LINK: https://github.com/SatoruGojo2k23/a11_device_realme_RMX2020.git
@@ -33,8 +33,8 @@ task:
       - echo "============================"
       - mkdir -p ~/work
       - cd ~/work
-      - repo init --depth=1 -u $MANIFEST
-      - repo sync -j8 --force-sync --no-tags --no-clone-bundle
+      - repo init --depth=1 --no-repo-verify -u $MANIFEST
+      - repo sync -c -j8 --force-sync --no-tags --no-clone-bundle
       - git clone --depth=1 $DT_LINK $DT_PATH
       - git clone --depth=1 $KT_LINK $KT_PATH
       - git clone --depth=1 $VT_LINK $VT_PATH
@@ -44,7 +44,7 @@ task:
       - echo "Adding Patches!"
       - echo "============================"
       - cd external/selinux && git fetch https://github.com/PixelExperience/external_selinux eleven && git cherry-pick 9d6ebe89430ffe0aeeb156f572b2a810f9dc98cc && cd ../..
-      - cd frameworks/av && git fetch https://github.com/phhusson/platform_frameworks_av android-11.0.0_r48-phh && git cherry-pick f0830faec98e65d4a03dba9b57b0cb2fd178e8f3 && cd ../..
+      - cd frameworks/base && git fetch https://github.com/AOSPA/android_frameworks_base && git cherry-pick 81581a12497e77644a4a0fbe4893b907c27e2bf6 && cd ../..
       - echo "============================"
       - echo "Syncing Complete!"
       - echo "============================"
@@ -57,10 +57,10 @@ task:
       - $EXTRA_CMD
       - export USE_CCACHE=1
       - export CCACHE_EXEC=/usr/bin/ccache
-      - ccache -M 50G
+      - ccache -M 100G
       - . build/envsetup.sh
       - lunch "$LUNCH_COMBO"
-      - brunch RMX2020
+      - mka bacon -j16
      
   Upload_script:
       - echo "============================"
