--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,5 +1,5 @@
 env:
-    MANIFEST: https://github.com/ResurrectionRemix-Revived/manifest.git -b Q --git-lfs
+    MANIFEST: https://github.com/LineageOS/android.git -b lineage-17.1
     DEVICE: RMX2020
     OEM: realme
     DT_LINK: https://github.com/SatoruGojo2k23/device_realme_RMX2020-A10.git
@@ -11,7 +11,7 @@ env:
     KT_PATH: kernel/$OEM/$DEVICE
     TARGET: bacon
     EXTRA_CMD: export SKIP_ABI_CHECKS=true
-    LUNCH_COMBO: rr_${DEVICE}-userdebug
+    LUNCH_COMBO: lineage_${DEVICE}-userdebug
     OUTPUT: lineageos*.zip
 
 task:
