--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,5 +1,5 @@
 env:
-    MANIFEST: https://github.com/Corvus-Q/android_manifest.git -b 10
+    MANIFEST: https://github.com/DirtyUnicorns/android_manifest -b q10x
     DEVICE: RMX2020
     OEM: realme
     DT_LINK: https://github.com/SatoruGojo2k23/device_realme_RMX2020-A10.git -b Corvus-Q
@@ -38,8 +38,6 @@ task:
       - git clone --depth=1 $DT_LINK $DT_PATH
       - git clone --depth=1 $KT_LINK $KT_PATH
       - git clone --depth=1 $VT_LINK $VT_PATH
-      - rm -rf system/timezone
-      - git clone --depth=1 https://github.com/LineageOS/android_system_timezone -b lineage-17.1 system/timezone
       - echo "============================"
       - echo "Syncing Complete!"
       - echo "============================"
@@ -56,7 +54,7 @@ task:
       - . build/envsetup.sh
       - lunch "$LUNCH_COMBO"
       - export TZ=Asia/Dhaka
-      - make corvus
+      - make bacon
      
   Upload_script:
       - echo "============================"
